--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,24 @@
+
+# Django #
+*.log
+*.pot
+*.pyc
+__pycache__
+db.sqlite3
+static/images
+media
+
+# celery 
+celerybeat-schedule.* 
+
+# Visual Studio Code # 
+.vscode/* 
+!.vscode/settings.json 
+!.vscode/tasks.json 
+!.vscode/launch.json 
+!.vscode/extensions.json 
+.history
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
